--- a/tractatus/package.json
+++ b/tractatus/package.json
@@ -19,6 +19,9 @@
     "next": "^13.5.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
+    "react-resizable": "^3.0.5",
+    "react-rnd": "^10.4.13",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
